Make `help` description into one big `<echo>`.
It will be easier to edit the description without having to worry
about shifting tags to accommodate character limits per line.

--- a/build.xml
+++ b/build.xml
@@ -56,55 +56,58 @@ is loaded when Ant starts up. Please run Ant again like this:
     <echo level="info">OK</echo>
   </target>
   
-  <target name="help">
-    <echo>** DHQ static site generation build process **</echo>
-    <echo></echo>
-    <echo>General format:</echo>
-    <echo>  ant [-lib common${file.separator}lib${file.separator}saxon] [-Dprop=val ...] [target ...]</echo>
-    <echo>Where:</echo>
-    <echo>-lib common${file.separator}lib${file.separator}saxon</echo>
-    <echo>  is required if the chosen target performs XSL transformations, but is optional otherwise.</echo>
-    <echo>-Dprop=val</echo>
-    <echo>  is how you send parameters (which ant calls “properties”) to the process; typically</echo>
-    <echo>  used to say which specific article file to work on, e.g. “-Darticle.id=000370”.</echo>
-    <echo>  (The “...” just means that you can use multiple -Dprop=val, as needed.)</echo>
-    <echo>target</echo>
-    <echo>  indicates what you want done. For a list of possible targets with short descriptions,</echo>
-    <echo>  issue `ant -projecthelp`. For longer descriptions, read on.</echo>
-    <echo/>
-    <echo>Targets:</echo>
-    <echo>       (Note that the “...” above means you can execute multiple targets at once;</echo>
-    <echo>        however, this should rarely be necessary or even particularly helpful in</echo>
-    <echo>        the DHQ case.)</echo>
-    <echo>help</echo>
-    <echo>  What you are reading now.</echo>
-    <echo>previewArticle                            (this is the default target)</echo>
-    <echo>  transform one article XML file (specified via its 6-digit number with</echo>
-    <echo>  -Darticle.id=, or via a prompt) into HTML. The output file is placed</echo>
-    <echo>  in the ${previewDir}${file.separator} subdirectory. It has relative links to assets in</echo>
-    <echo>  this main directory (not the subdirectory), and thus should be</echo>
-    <echo>  suitable for viewing on your local machine. (And may not be suitable</echo>
-    <echo>  for use on the server.)</echo>
-    <echo>zipPreviewArticle</echo>
-    <echo>  similar to 'previewArticle', but: a) The output HTML file *and* its</echo>
-    <echo>  assets are archived together into a single ZIP file. b) The output</echo>
-    <echo>  HTML file uses relative links to the assets in the same directory,</echo>
-    <echo>  as would happen when the ZIP file is unzipped. Both the HTML file</echo>
-    <echo>  and the ZIP file are put in the ${previewDir}${file.separator} subdirectory,</echo>
-    <echo>  overwriting any previous version there.</echo>
-    <echo>generateIssues</echo>
-    <echo>  generates the entire static site — index pages and HTML for each issue</echo>
-    <echo>  listed in the toc${file.separator}toc.xml file, including the article itself, the author</echo>
-    <echo>  biographies, and the “landing” page. The output is placed in the</echo>
-    <echo>  ${toDir.static}${file.separator} directory, i.e. in a sibling to this directory, overwriting</echo>
-    <echo>  any previous version. (Some temporary files are also placed in</echo>
-    <echo>  ${toDir.base.path}${file.separator}.) The output is designed to be viewed from a server, as</echo>
-    <echo>  it uses absolute filepaths to its assets. Thus it will not work properly</echo>
-    <echo>  (and will look ugly) if viewed on your local machine.</echo>
-    <echo>generateSite</echo>
-    <echo>  As above, but also ZIPs up the entire ${toDir.static}/ directory to make</echo>
-    <echo>  it easy to transfer (e.g., to a server). The output file can be found at</echo>
-    <echo>  ${toDir.base.path}${file.separator}${context}.zip.</echo>
+  <!-- Documentation for the targets defined by this Ant build file. -->
+  <target name="help"
+          description="Documentation on how to use DHQ Ant build targets.">
+    <echo>** DHQ static site generation build process **
+
+General format:
+  ant [-lib common${file.separator}lib${file.separator}saxon] [-Dprop=val ...] [target ...]
+Where:
+-lib common${file.separator}lib${file.separator}saxon
+  is required if the chosen target performs XSL transformations, but is optional otherwise.
+-Dprop=val
+  is how you send parameters (which ant calls “properties”) to the process; typically
+  used to say which specific article file to work on, e.g. “-Darticle.id=000370”.
+  (The “...” just means that you can use multiple -Dprop=val, as needed.)
+target
+  indicates what you want done. For a list of possible targets with short descriptions,
+  issue `ant -projecthelp`. For longer descriptions, read on.
+
+Targets:
+       (Note that the “...” above means you can execute multiple targets at once;
+        however, this should rarely be necessary or even particularly helpful in
+        the DHQ case.)
+help
+  What you are reading now.
+previewArticle                            (this is the default target)
+  Transform one article XML file (specified via its 6-digit number with
+  -Darticle.id=, or via a prompt) into HTML. The output file is placed
+  in the ${previewDir}${file.separator} subdirectory. It has relative links to assets in
+  this main directory (not the subdirectory), and thus should be
+  suitable for viewing on your local machine. (And may not be suitable
+  for use on the server.)
+zipPreviewArticle
+  Similar to 'previewArticle', but: a) The output HTML file *and* its
+  assets are archived together into a single ZIP file. b) The output
+  HTML file uses relative links to the assets in the same directory,
+  as would happen when the ZIP file is unzipped. Both the HTML file
+  and the ZIP file are put in the ${previewDir}${file.separator} subdirectory,
+  overwriting any previous version there.
+generateIssues
+  Generates the entire static site — index pages and HTML for each issue
+  listed in the toc${file.separator}toc.xml file, including the article itself, the author
+  biographies, and the “landing” page. The output is placed in the
+  ${toDir.static}${file.separator} directory, i.e. in a sibling to this directory, overwriting
+  any previous version. (Some temporary files are also placed in
+  ${toDir.base.path}${file.separator}.) The output is designed to be viewed from a server, as
+  it uses absolute filepaths to its assets. Thus it will not work properly
+  (and will look ugly) if viewed on your local machine.
+generateSite
+  As above, but also ZIPs up the entire ${toDir.static}/ directory to make
+  it easy to transfer (e.g., to a server). The output file can be found at
+  ${toDir.base.path}${file.separator}${context}.zip.
+</echo>
   </target>
 
   <!-- Generate static HTML versions of the DHQ issues (articles, bios, & indices). -->
