Edit `help` documentation for `generateIssues` and -`Site`.
Also added documentation for the `compressStatic` target, since
`generateSite` no longer calls it.

--- a/build.xml
+++ b/build.xml
@@ -103,17 +103,22 @@ makeInternalPreview
   articles will be found inside the ${toDir.proofing.path}${file.separator}editorial${file.separator} 
   directory.
 generateIssues
-  Generates the entire static site — index pages and HTML for each issue
-  listed in the toc${file.separator}toc.xml file, including the article itself, the author
-  biographies, and the “landing” page. The output is placed in the
-  ${toDir.static.path}${file.separator} directory, i.e. inside a sibling to this directory, 
-  overwriting any previous version. (Some temporary files are also placed 
-  in ${toDir.base.path}${file.separator}.) The output is designed to be viewed from a server, as
-  it uses absolute filepaths to its assets. Thus it will not work properly
-  (and will look ugly) if viewed on your local machine.
+  Generate all parts of the static site that are derived from the DHQ TOC 
+  (toc${file.separator}toc.xml): article HTML, issue indexes, author biographies, and full 
+  journal indexes. This target generally does _not_ need to be run on its 
+  own — the `generateSite` target will run this one automatically.
 generateSite
-  As above, but also ZIPs up the entire ${toDir.static.path}${file.separator} directory to make
-  it easy to transfer (e.g., to a server). The output file can be found at
+  Run `generateIssues` as described above, then compile the rest of the 
+  DHQ static site. XML, images, and other files are copied from this main 
+  directory to the ${toDir.static.path}${file.separator} directory. XHTML snippets are 
+  also transformed into full DHQ webpages. The output is placed in the 
+  ${toDir.static.path}${file.separator} directory, i.e. inside a sibling to this directory.
+  Important caveats: (a) Older files inside ${toDir.static.path}${file.separator} may be 
+  overwritten, but are not deleted. (b) HTML links to other pages within 
+  DHQ may not work, unless hosted on a web server at `URL/${context}`.
+compressStatic
+  Compress the entire ${toDir.static.path}${file.separator} directory to make it easy to 
+  transfer (e.g., to a server). The output file can be found at
   ${toDir.base.path}${file.separator}${context}.zip.
 </echo>
   </target>
