Switch name of output search page to just “search.html”.

--- a/build.xml
+++ b/build.xml
@@ -368,13 +368,17 @@ is loaded when Ant starts up. Please run Ant again like this:
     </move>
     <echo> ... tweaking UVEPSS search page</echo>
     <xslt in="${toDir.static}/vol/search.html"
-          out="${toDir.static}/vol/search_DHQ_articles.html"
+          out="${toDir.static}/vol/search_tweaked.html"
           style="${toDir.static}/common/xslt/uvepss_post_process_search_page.xslt"
           classpath="${processor.location}"
           force="true"
           failonerror="false">
       <factory name="${processor.name}"/>
     </xslt>    
+    <move file="${toDir.static}/vol/search.html"
+	  tofile="${toDir.static}/vol/search_orig.html"/>
+    <move file="${toDir.static}/vol/search_tweaked.html"
+	  tofile="${toDir.static}/vol/search.html"/>
   </target>
   
   <target name="generateSearchableToGo" depends="generateSearchable"
