Include note on how to set `do.proofing.full` from the command line

--- a/build.xml
+++ b/build.xml
@@ -279,7 +279,8 @@ compressStatic
            addproperty="do.proofing.full" defaultvalue="false"
            validargs="true,false"
 >Do you want to proof the full DHQ site? If so, type "true".
-To proof only the internal preview, hit the return key or type "false".</input>
+To proof only the internal preview, hit the return key or type "false".
+To set this value ahead of time, append "-Ddo.proofing.full=VALUE" to your command.</input>
     <!-- Delete any contents of the proofing directory before beginning. This 
       ensures that the same directory can be re-used for a full site proofing 
       endeavor as for an editorial-only endeavor. -->
