Use relative paths in static pages...
...assuming they're served out of a directory below the DHQ home
directory.

Also, use the "Proofing copy" header for the lists of all articles
(in the Preview area), and make sure the Javascript is loaded from
static pages.

--- a/build.xml
+++ b/build.xml
@@ -174,9 +174,9 @@ compressStatic
     <copy todir="${toDir.use}${file.separator}submissions">
       <fileset dir="submissions" includes="*.txt *.xml"/>
     </copy>
-    <!-- Copy web assets. -->
+    <!-- Copy web assets and DHQ schemas. -->
     <copy todir="${toDir.use}${file.separator}common">
-      <fileset dir="common" excludes="lib/ tests/"/>
+      <fileset dir="common" excludes="schema/ lib/ tests/"/>
     </copy>
     <!-- Create a generic error page. (HTTP status 500) -->
     <xslt in="toc${file.separator}toc.xml" 
@@ -253,9 +253,12 @@ compressStatic
           handledirsep="yes"/>
       </mapper>
       <factory name="${processor.name}"/>
-      <param name="assets-path" expression="..${file.separator}"/>
       <param name="context" expression="${context}"/>
       <param name="doProofing" expression="${do.proofing}"/>
+      <!-- This parameter assumes that all static pages are exactly one directory 
+        below the home directory. This is the case as of 2024-07, but may not always 
+        be so. -->
+      <param name="path_to_home" expression=".."/>
     </xslt>
     <!-- Generate the ZIP file of all articles' XML. -->
     <mkdir dir="${toDir.use}${file.separator}data"/>
