Remove caveat about the static site's internal links

--- a/build.xml
+++ b/build.xml
@@ -113,9 +113,8 @@ generateSite
   directory to the ${toDir.static.path}${file.separator} directory. XHTML snippets are 
   also transformed into full DHQ webpages. The output is placed in the 
   ${toDir.static.path}${file.separator} directory, i.e. inside a sibling to this directory.
-  Important caveats: (a) Older files inside ${toDir.static.path}${file.separator} may be 
-  overwritten, but are not deleted. (b) HTML links to other pages within 
-  DHQ may not work, unless hosted on a web server at `URL/${context}`.
+  An important caveat: Older files inside ${toDir.static.path}${file.separator} may be 
+  overwritten, but are not deleted.
 compressStatic
   Compress the entire ${toDir.static.path}${file.separator} directory to make it easy to 
   transfer (e.g., to a server). The output file can be found at
@@ -155,7 +154,7 @@ compressStatic
 
   <!-- Generate a static version of the DHQ website. -->
   <target name="generateSite" depends="checkXmlResolver,generateIssues"
-     description="Generate a full static copy of DHQ intended for the DHQ server. This is NOT a standalone copy.">
+     description="Generate a full static copy of DHQ intended for the DHQ server.">
     <mkdir dir="${toDir.use}"/>
     <!-- Use the Ant build file created in "generateIssues" to copy articles' 
       resources to the right static directories. -->
