Tweak documentation in Ant `help` target

--- a/build.xml
+++ b/build.xml
@@ -82,17 +82,14 @@ help                                     (this is the default target)
 previewArticle
   Transform one article XML file (specified via its 6-digit number with
   -Darticle.id=, or via a prompt) into HTML. The output file is placed
-  in the ${previewDir}${file.separator} subdirectory. It has relative links to assets in
-  this main directory (not the subdirectory), and thus should be
-  suitable for viewing on your local machine. (And may not be suitable
-  for use on the server.)
+  in the ${previewDir}${file.separator} subdirectory, along with any CSS, 
+  Javascript, or images required to render the page. This target also
+  generates a ZIP file, as described in 'zipPreviewArticle'.
 zipPreviewArticle
-  Similar to 'previewArticle', but: a) The output HTML file _and_ its
-  assets are archived together into a single ZIP file. b) The output
-  HTML file uses relative links to the assets in the same directory,
-  as would happen when the ZIP file is unzipped. Both the HTML file
-  and the ZIP file are put in the ${previewDir}${file.separator} subdirectory,
-  overwriting any previous version there.
+  Similar to 'previewArticle'. The output HTML file and its web assets are 
+  archived together into a single ZIP file. The HTML file and the ZIP file 
+  are put in the ${previewDir}${file.separator} subdirectory, overwriting 
+  any previous version there.
 makeInternalPreview
   Generate a proofing copy of all unpublished articles in the “editorial”
   section of the toc${file.separator}toc.xml file. You will be given the option to 
@@ -330,7 +327,7 @@ To proof only the internal preview, hit the return key or type "false".
   
   <!-- Create an HTML preview version of a single article. -->
   <target name="previewArticle" depends="checkXmlResolver" 
-     description="Create an HTML preview version of a single article.">
+     description="Create the HTML preview version of a single article.">
     <!-- If the 'article.id' property wasn't already set using the command line, Ant 
       will prompt for it. -->
     <input unless:set="article.id"
