Delete the generated article HTML after compressing it

--- a/build.xml
+++ b/build.xml
@@ -374,6 +374,7 @@ To proof only the internal preview, hit the return key or type "false".
       <param name="dir-separator" expression="${file.separator}"/>
       <param name="doProofing" expression="true"/>
     </xslt>
+    <!-- Compress the article HTML along with useful web assets. -->
     <zip destfile="${previewDir}${file.separator}dhq-article-${article.id}.zip">
       <fileset dir="." includes="common/css/ common/js/"/>
       <fileset dir=".${file.separator}articles${file.separator}${article.id}" 
@@ -382,6 +383,9 @@ To proof only the internal preview, hit the return key or type "false".
         <filename name="${article.id}.html"/>
       </fileset>
     </zip>
+    <!-- Once the HTML is included in the ZIP, we can delete it. Its links won't 
+      work in the preview directory anyway. -->
+    <delete file="${previewDir}${file.separator}${article.id}.html"/>
   </target>
   
 </project>
