Use dynamic, rather than hard-coded to my machine, paths for debugging, as it seems like a good idea to leave the debugging in for at least a little while. But flag it dramatically with comments to make it easy to remove.

--- a/build.xml
+++ b/build.xml
@@ -339,6 +339,17 @@ generateSearchableToGo
         this.
     -->
     <echo> ... removing PREVIEW files</echo>
+    <!-- NOTE:
+	 The code that runs XSLT to create a list of files to be
+	 removed and then removes them should be system-indepen-
+	 dant. Some of the debugging code in this section relies on
+	 /usr/bin/find, and thus will only work on a *nix system that
+	 has such a command. This code should be removed in the
+	 relatively near future in order to allow this to run on
+	 Windoze. These bits are marked with “PPDMN2BR4W” (possibly
+	 problematic debugging that may need to be removed for
+	 Windows).
+    -->
     <property name="preview.list.file" location="${toDir.static.path}/list_of_preview_files_to_erase.txt"/>
     <xslt in="common/xslt/list_preview_files.xslt" 
           out="${preview.list.file}"
@@ -348,31 +359,32 @@ generateSearchableToGo
           failonerror="false">
       <factory name="${processor.name}"/>
     </xslt>
-    <echo> ... removing PREVIEW files, DEBUG props: toDir=${toDir}, toDir.base=${toDir.base}, toDir.use=${toDir.use}, toDir.base.path toDir.static=${toDir.static}, toDir.static.path=${toDir.static.path}</echo>
-    <echo> ... removing PREVIEW files, DEBUG IN: ${preview.list.file}=</echo>
-    <concat fixlastline="yes"> <fileset file="${preview.list.file}"/> </concat>
     <replaceregexp
         file="${preview.list.file}"
         match="^file:.*${toDir.static.path}/"
         replace=""
         flags="gm"/>
-    <echo> ... removing PREVIEW files, DEBUG OUT: ${preview.list.file}=</echo>
-    <concat fixlastline="yes"> <fileset file="${preview.list.file}"/> </concat>
-    <echo> ... removing PREVIEW files, DEBUG LIST pre-del= (find /home/syd/Documents/dhq-static/dhq/vol -name *.xhtml)</echo>
-    <exec executable="/usr/bin/find">
-      <arg value="/home/syd/Documents/dhq-static/dhq/vol"/>
-      <arg value="-name"/>
-      <arg value="*.xhtml"/>
-    </exec>
+    <echo> ... DEBUG, ${toDir.static.path}/data/uvepss/ now contains, 05:</echo> <!--PPDMN2BR4W-->
+    <exec executable="/usr/bin/find">                                            <!--PPDMN2BR4W-->
+      <arg value="${toDir.static.path}/data/uvepss"/>                            <!--PPDMN2BR4W-->
+    </exec>                                                                      <!--PPDMN2BR4W-->
+    <echo> ... removing PREVIEW files, DEBUG OUT: ${preview.list.file}=</echo>   <!--PPDMN2BR4W-->
+    <concat fixlastline="yes"> <fileset file="${preview.list.file}"/> </concat>  <!--PPDMN2BR4W-->
+    <echo> ... removing PREVIEW files, DEBUG LIST pre-del= (find ${toDir.static.path}/vol/ -name *.xhtml)</echo> <!--PPDMN2BR4W-->
+    <exec executable="/usr/bin/find">                                            <!--PPDMN2BR4W-->
+      <arg value="${toDir.static.path}/vol"/>                                    <!--PPDMN2BR4W-->
+      <arg value="-name"/>                                                       <!--PPDMN2BR4W-->
+      <arg value="*.xhtml"/>                                                     <!--PPDMN2BR4W-->
+    </exec>                                                                      <!--PPDMN2BR4W-->
     <delete>
       <fileset dir="${toDir.static.path}" includesfile="${preview.list.file}"/>
     </delete>
-    <echo> ... removing PREVIEW files, DEBUG LIST postdel= (find /home/syd/Documents/dhq-static/dhq/vol -name *.xhtml)</echo>
-    <exec executable="/usr/bin/find">
-      <arg value="/home/syd/Documents/dhq-static/dhq/vol"/>
-      <arg value="-name"/>
-      <arg value="*.xhtml"/>
-    </exec>
+    <echo> ... removing PREVIEW files, DEBUG LIST postdel= (find ${toDir.static.path}/vol/ -name *.xhtml)</echo> <!--PPDMN2BR4W-->
+    <exec executable="/usr/bin/find">                                            <!--PPDMN2BR4W-->
+      <arg value="${toDir.static.path}/vol"/>                                    <!--PPDMN2BR4W-->
+      <arg value="-name"/>                                                       <!--PPDMN2BR4W-->
+      <arg value="*.xhtml"/>                                                     <!--PPDMN2BR4W-->
+    </exec>                                                                      <!--PPDMN2BR4W-->
     <!-- Convert path to config file from relative path to absolute path: -->
     <property name="absolute.config.file" location="${toDir.static.path}/data/uvepss/config.xml"/>
     <echo level="info">Debug: call UVEPSS with dir=${uvepssDir} and ssConfigFile=${absolute.config.file}</echo>
